tests/algorithms/x/PHP/maths/gamma.out
Fatal error: Cannot redeclare function sqrt() in /workspace/mochi/tests/algorithms/x/PHP/maths/gamma.php on line 11